added photo files to services and team page and testimonials

--- a/services.html
+++ b/services.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
-<!-- the cubicals.jpg, server_comp1.jpg, server.jpg, keyboard.jpg, server_room1.jpg, server_room3.jpg, server_room4.jpg, server_room5.jpg, and server_room5.jpg photos will be used on this page, the page will have a link to the capabilities_statement.pdf. The images will be resized to three standard sizes to be used in a photo grid.-->
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Services</title>
 	<link rel="stylesheet" href="css/html5reset.css">
 	<link rel="stylesheet" href="css/style.css">
@@ -30,7 +30,19 @@
 		<li> on-site and remote IT support</li>
 		</ul>
 		<p>Contact us for a quote! </p>
-	<button onclick="window.location.href='contact.html'"> Contact Us</button></main>
+	<button onclick="window.location.href='contact.html'"> Contact Us</button>
+	<div class="gallery">
+	<img src="images/server_comp1_edit.jpg" alt="a server room computer"/>
+	<img src="images/server_room1_edit.jpg" alt="a functioning server"/>
+	<img src="images/server_room5_edit.jpg" alt="a functioning server"/>
+	<img src="images/cubicles.jpg" alt="a workplace"/>
+	<img src="images/sever_room4_edit.jpg" alt="a server room"/>
+	<img src="images/server.jpg" alt="a server"/>
+	<img src="images/keyboard.jpg" alt="a keyboard"/>
+	<img src="images/server_room3.jpg" alt=" a server room"/>
+	<img src="images/server_room4.jpg" alt="a server room"/>
+		</div>
+	</main>
 <footer> <p>Phone: (908) 400-7775</p> </footer>
 </body>
 </html>
