--- a/team.html
+++ b/team.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
-<!-- the cassie_headshot.jpg and christopher_headshot.jpg photos will be included on this page along with the 3d_logo.png-->
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Team</title>
 	<link rel="stylesheet" href="css/html5reset.css">
 	<link rel="stylesheet" href="css/style.css">
@@ -22,9 +22,9 @@
 </header><main id="main">
 <h1>Our Team</h1>
 <p> We are small company and are currently looking to add to our team. Contact us if you are interested in joining. </p>
-	<figure><figcaption> Christopher Eddy | CEO </figcaption>
+	<figure><img src="images/christopher_headshot.jpg" alt="picture of CEO Christopher Eddy"><figcaption> Christopher Eddy | CEO </figcaption>
 	</figure>
-	<figure><figcaption> Casssandra Eddy | Marketing Coordinator</figcaption></figure></main>
+	<figure><img src="images/cassie_headshot.jpg" alt=" picture of Marketing Coordinator Cassandra Eddy"><figcaption> Cassandra Eddy | Marketing Coordinator</figcaption></figure></main>
 <footer> <p>Phone: (908) 400-7775</p>  </footer>
 </body>
 </html>
