--- a/testimonials.html
+++ b/testimonials.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
-<!--the nyc_aerial.jpg photo will be used on this page--> 
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Testimonials</title>
 	<link rel="stylesheet" href="css/html5reset.css">
 	<link rel="stylesheet" href="css/style.css">
@@ -20,19 +20,20 @@
 		<li> <a href="contact.html">Contact Us</a></li>
 		</ul></nav>
 </header>
-<!--Testimonials have been requested from clients and are currently being written--> 
 	<main>
 	<h1> Testimonials from Our Clients</h1>
-	<div id="main"> <h2> Testimonial 1</h2>
-		<p> Text for the first testimonial will go here.
-		</p>
-	<h2>Testimonial 2</h2>
-	<p>Text for the second testimonial will go here.
-		</p>
-	<h2> Testimonial 3</h2>
-		<p> Text for the third testimonial will go here.
-		</p>
-	</div></main>
+	<img src="images/nyc_aerial.jpg" alt=" ">
+	<div id="main"> <h2>1</h2>
+		<p> I am delighted to recommend Christopher Eddy owner of Eddy Enterprises to provide you with IT support. </p>
+		<p>I am the owner of a bookkeeping and tax preparation business. My computer issues include overheated CPU’s, server malfunctions, selecting, purchasing, configuring and installing state of the art servers and printers.</p>
+		<p>My professional relationship with Christopher is over twenty-five years. I have relied on him to plan, implement and maintain network systems for myself my clients.</p>
+		<p>I find that Christopher (i) is a good listener who make sense of a complex problem (ii) an excellent communicator who explains in a manner that make the problem and solution clear (iii) has a depth of knowledge that could only be from his dedication and experiences (iv) is able to deliver acceptable results when others failed.<br> Jerry Lewis</p>
+		<h2>2</h2>
+		<p>I’ve worked with Eddy Enterprises and specifically Christopher for over 10 years.  He is very knowledgeable and very helpful. He’s always ready to help whenever there’s a problem!  He will talk you through the problem with lots of patience.  Anything to get me back up and running as soon as possible.
+		<br>Lisa Boyd </p>
+		<h2>3</h2>
+		<p> I have known Christopher for about two years since working at my present job managing a Senior Center building, he is very knowledgeable with computer systems. He also has a wonderful personality and puts me at ease when I have a problem. <br>Cerisa Howard </p>
+		</div></main>
 <footer> <p>Phone: (908) 400-7775</p> </footer>
 </body>
 </html>
