--- a/about.html
+++ b/about.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<!--the nyc_night.jpg and server_work.jpg images will be included on this page, both will need to be resized-->
 
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="css/html5reset.css">
 	<link rel="stylesheet" href="css/style.css">
     <title>About Us</title>
@@ -24,6 +24,7 @@
 	<main id="main">
 	<h1> Eddy Enterprises, LLC </h1>
 	<h2> Eddy Enterprises LLC has been providing information technology expertise to New York Tri-State area corporations for over 20 years. Our expert engineers assist businesses in implementing Local and Wide Area networks. </h2>
+	<img src="images/nyc_night.jpg" alt=" "/>
 	<button onclick="window.location.href='contact.html'"> Contact Us </button>
 	<p>We use a unique approach called the 4 A's to assist our customers:</p>
 	<h3>Analyze | Assemble | Apply | Ally</h3>
@@ -35,6 +36,7 @@
 <p>Based on the final approval of the assembly document, we Apply the solutions to your organization. During this phase we develop and implement all mutually agreed upon IT decisions and solutions.</p>
 <h4>Ally</h4>
 <p>And finally, we Ally with our clients by establishing ongoing partnerships to ensure that these systems and infrastructures operate smoothly during the maintenance phase.  We constantly monitor systems to identify potential problems and correct them before critical system failures occur. This phase also includes the ongoing examination of new technologies to assess the technical advancement viability for advantageous business growth paths for our customers’ IT environ.</p>
+<img src="images/server_work.jpg" alt="an engineer working on a server"/>
 <button onclick="window.location.href='index.html'"> Return to Homepage</button></main>
 <footer> <p>Phone: (908) 400-7775</p> </footer>
 </body>
