--- a/contact.html
+++ b/contact.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
-<!-- one of the logo png photos will be used on this page along with the team_brainstorm.jpg and contact.jpg photos--> 
 <html lang="en">
 <head>
     <meta charset="UTF-8"/>
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Contact Us</title>
 	<link rel="stylesheet" href="css/html5reset.css">
 	<link rel="stylesheet" href="css/style.css">
